--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^5.0.1",
     "register-service-worker": "^1.6.2",
+    "sweetalert2": "^9.4.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-the-mask": "^0.11.1",
