--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.24.0",
     "register-service-worker": "^1.6.2",
     "sweetalert2": "^9.4.3",
     "vue": "^2.6.10",
